# rust-chat-e2e

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README-DOCKER.md  README.md  docker-compose.dev.yml  docker-compose.yml
.kiro/specs/flutter-e2e-chat-sdk/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/rust-e2e-chat-api/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/tenant-admin-portal/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/web-e2e-chat-sdk/: .config.kiro  design.md  requirements.md  tasks.md
client/: index.html  nginx.conf  nginx.dev.conf
crates/api/: Cargo.toml
crates/api/src/: admin.rs  admin_auth.rs  attachments.rs  conversations.rs  error.rs  groups.rs  kds.rs  main.rs  registrations.rs
crates/auth/: Cargo.toml
crates/auth/src/: jwks_cache.rs  lib.rs  middleware.rs  refresh.rs  tenant_registry.rs  token_store.rs  validate.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  types.rs
crates/groups/: Cargo.toml
crates/groups/src/: lib.rs
crates/kds/: Cargo.toml
crates/kds/src/: lib.rs
crates/messaging/: Cargo.toml
crates/messaging/src/: lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/realtime/: Cargo.toml
crates/realtime/src/: lib.rs
crates/tenant/: Cargo.toml
crates/tenant/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
docs/: CONTRIBUTING.md
flutter_sdk/: .gitignore  README.md  main.dart  pubspec.yaml
flutter_sdk/example/: pubspec.yaml
flutter_sdk/example/lib/: main.dart
flutter_sdk/lib/: rust_e2e_chat_sdk.dart  testing.dart
flutter_sdk/lib/src/client/: chat_client.dart  chat_client_config.dart  conversation_manager.dart  otpk_replenisher.dart  rt_event_router.dart  spk_rotator.dart
flutter_sdk/lib/src/conversations/: chat_conversation.dart  chat_message.dart  group_conversation.dart
flutter_sdk/lib/src/crypto/: crypto_types.dart  key_generator.dart  ratchet_engine.dart  sender_key_engine.dart  x3dh_engine.dart
flutter_sdk/lib/src/errors/: sdk_error.dart
flutter_sdk/lib/src/session/: flutter_secure_session_store.dart  session_data.dart  session_store.dart
flutter_sdk/lib/src/transport/: api_models.dart  connection_manager.dart  rest_client.dart  rt_event.dart  ws_channel.dart
flutter_sdk/lib/src/utils/: logger.dart
flutter_sdk/test/client/: mock_client_test.dart
flutter_sdk/test/crypto/: key_generator_test.dart  ratchet_test.dart  sender_key_test.dart  x3dh_test.dart
flutter_sdk/test/session/: session_store_test.dart
migrations/: 20240101000000_create_tenants.sql  20240101000001_create_all_tables.sql  20240101000002_create_attachments.sql  20240101000003_add_attachment_id_to_messages.sql  20240601000000_create_tenant_registrations.sql
oidc-proxy/: nginx.conf
web/: Dockerfile  README.md
web/src/app/: globals.css  layout.tsx
web/src/app/admin/: page.tsx
web/src/app/admin/_components/: CreateTenantForm.tsx  RegistrationCard.tsx  TenantCard.tsx  UsageModal.tsx
web/src/app/docs/: page.tsx
web/src/app/register/: page.tsx
web/src/app/test/: ChatTab.tsx  DevLog.tsx  UsersTab.tsx  apiHelpers.ts  crypto.ts  page.tsx  useDevClientStore.ts
web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  CopyButton.tsx  Input.tsx  Modal.tsx  Toast.tsx
web/src/lib/: api.ts  auth.ts  types.ts
web_sdk/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
web_sdk/src/: browser.ts  index.ts  node.ts  test-setup.ts
web_sdk/src/__tests__/: encoding.test.ts  key-generator.test.ts  memory-session-store.test.ts  mock-client.test.ts  ratchet-engine.test.ts  sdk-error.test.ts  x3dh.test.ts
web_sdk/src/client/: chat-client-config.ts  chat-client.ts  connection-state.ts  conversation-registry.ts  otpk-replenisher.ts  rt-event-router.ts  spk-rotator.ts
web_sdk/src/conversation/: chat-message.ts  conversation.ts  group-conversation.ts  one-to-one-conversation.ts
web_sdk/src/crypto/: crypto-types.ts  crypto-utils.ts  key-generator.ts  ratchet-engine.ts  sender-key-engine.ts  x3dh-engine.ts
web_sdk/src/errors/: sdk-error.ts
web_sdk/src/session/: indexed-db-session-store.ts  memory-session-store.ts  node-file-session-store.ts  platform.ts  session-store.ts
web_sdk/src/transport/: api-types.ts  attachment-client.ts  connection-manager.ts  rest-client.ts  rt-event.ts  ws-manager.ts
web_sdk/src/utils/: encoding.ts  logger.ts  retry.ts  typed-emitter.ts
web_sdk/testing/: index.ts  mock-chat-client.ts  vitest-helpers.ts
