[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/transport",
    "crates/auth",
    "crates/tenant",
    "crates/kds",
    "crates/messaging",
    "crates/groups",
    "crates/realtime",
    "crates/observability",
    "crates/api",
]

[workspace.dependencies]
# Web framework
axum              = { version = "0.7", features = ["ws", "multipart"] }
tower             = "0.5"
tower-http        = { version = "0.6", features = ["trace", "request-id", "catch-panic"] }
http              = "1"
tokio             = { version = "1", features = ["full"] }

# Cryptography
curve25519-dalek  = "4"
ed25519-dalek     = { version = "2", features = ["rand_core"] }

# Database
sqlx              = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio", "macros"] }
chrono            = { version = "0.4", features = ["serde"] }
uuid              = { version = "1", features = ["v4", "serde"] }

# Cache / queues
redis             = { version = "0.27", features = ["tokio-comp"] }

# Auth
jwt-authorizer    = "0.15"
jsonwebtoken      = "9"

# Serialization
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
bytes             = "1"

# Observability
prometheus-client = "0.22"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Testing
proptest          = "1"
testcontainers    = "0.23"
testcontainers-modules = { version = "0.10", features = ["postgres", "redis"] }

# Async utilities
async-trait       = "0.1"
thiserror         = "1"

# Encoding
base64            = "0.22"

# HTTP client (for JWKS fetch)
reqwest           = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
