[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
common        = { path = "../common" }
tenant        = { path = "../tenant" }
auth          = { path = "../auth" }
kds           = { path = "../kds" }
messaging     = { path = "../messaging" }
groups        = { path = "../groups" }
realtime      = { path = "../realtime" }
observability = { path = "../observability" }
axum          = { workspace = true }
tower         = { workspace = true }
tower-http    = { workspace = true }
tokio         = { workspace = true }
bytes         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
uuid          = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror     = { workspace = true }
async-trait   = { workspace = true }
sqlx          = { workspace = true }
redis         = { workspace = true }
chrono        = { workspace = true }
hex           = "0.4"
rand          = "0.8"

[dev-dependencies]
proptest          = { workspace = true }
testcontainers    = { workspace = true }
testcontainers-modules = { workspace = true }
