[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
common        = { path = "../common" }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
uuid          = { workspace = true }
jwt-authorizer = { workspace = true }
jsonwebtoken  = { workspace = true }
tracing       = { workspace = true }
thiserror     = { workspace = true }
async-trait   = { workspace = true }
sqlx          = { workspace = true }
base64        = { workspace = true }
chrono        = { workspace = true }
reqwest       = { workspace = true }
axum          = { workspace = true }
tower         = { workspace = true }
