[package]
name = "messaging"
version = "0.1.0"
edition = "2021"

[dependencies]
common      = { path = "../common" }
realtime    = { path = "../realtime" }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
sqlx        = { workspace = true }
redis       = { workspace = true }
bytes       = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
chrono      = { workspace = true }

[dev-dependencies]
proptest        = { workspace = true }
testcontainers  = { workspace = true }
testcontainers-modules = { workspace = true }
tokio           = { workspace = true }
